--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-loading-indicators": "^1.0.0",
