--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "build:secure": "cross-env NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
+    "build:dev": "cross-env NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
